add dashboard html

--- a/Amex.CCA.WebClient/app/src/app/dashboard/dashboard.template.html
+++ b/Amex.CCA.WebClient/app/src/app/dashboard/dashboard.template.html
@@ -32,7 +32,7 @@
         </div>
 
         <div class="col-xs-3">
-          <h5><label for="cardtype">{{creditcard.CardTypeId}}</label></h5>
+          <h5><label for="cardtype">{{creditcard.CardTypeName}}</label></h5>
         </div>
 
         <div class="col-xs-3">
@@ -157,13 +157,13 @@
                 <label for="ddlCardType">Card Type</label>
               </div>
               <div class="col-md-3">
-                <label>- {{creditcard?.CardTypeId}} Type</label>
+                <label>- {{creditcard?.CardTypeName}} Type</label>
               </div>
               <div class="col-md-3">
                 <label for="ddlNationality">Nationality</label>
               </div>
               <div class="col-md-3">
-                <label>- {{creditcard?.NationalityId}} </label>
+                <label>- {{creditcard?.NationalityName}} </label>
               </div>
             </div>
 
