add dashboard styles

--- a/Amex.CCA.WebClient/app/src/app/dashboard/dashboard.styles.scss
+++ b/Amex.CCA.WebClient/app/src/app/dashboard/dashboard.styles.scss
@@ -1,6 +1,12 @@
-.panel panel-primary{
-  width:100%;
+.panel panel-primary {
+  width: 100%;
+  background-color: rgba(18, 136, 244, 0.99);
+}
+
+.lightblue{
+  background-color:rgba(13, 92, 238, 0.25);
 }
 
 .panel-heading {
+  align-items:center;
   }
