Completed data access of approve user

--- a/Amex.CCA.WebClient/app/src/app/user/user-approve.template.html
+++ b/Amex.CCA.WebClient/app/src/app/user/user-approve.template.html
@@ -17,9 +17,9 @@
         <div class="col-xs-12 approve_list" >
             <div class="" *ngFor="let userApprove of usersToApprove">
                 <div class="col-xs-12 col-md-10 "> 
-                   <span class="text_capitalize"> {{userApprove.Email}} &nbsp;</span>
+                   <span class="text_capitalize"> {{userApprove.ProfileName}} &nbsp;</span>
                     <i class="fa fa-angle-left" aria-hidden="true"></i>&nbsp; 
-                    {{userApprove.UserName}}&nbsp;
+                    {{userApprove.Email}}&nbsp;
                     <i class="fa fa-angle-right" aria-hidden="true"></i>
                 </div>
                 <div class="col-xs-12 col-md-2 action-buttons">
