--- a/Amex.CCA.WebClient/app/src/app/creditcard/viewcreditcard.template.html
+++ b/Amex.CCA.WebClient/app/src/app/creditcard/viewcreditcard.template.html
@@ -5,7 +5,7 @@
             <h4 class="modal-title">Card Details</h4>
         </div>
         <div class="modal-body">
-            <label>{{question}}</label><input type="text" class="form-control" [(ngModel)]="message" name="name">
+            <label>{{FullName}}</label><input type="text" class="form-control" [(ngModel)]="message" name="name">
         </div>
         <div class="modal-footer">
             <button type="button" class="btn btn-primary" (click)="apply()">OK</button>
