Credit card mapping.

--- a/Amex.CCA.WebClient/app/src/app/creditcard/viewcreditcard.template.html
+++ b/Amex.CCA.WebClient/app/src/app/creditcard/viewcreditcard.template.html
@@ -7,6 +7,15 @@
         <div class="modal-body">
             <label>{{FullName}}</label><input type="text" class="form-control" [(ngModel)]="message" name="name">
         </div>
+        <div class="modal-body">
+            <label>{{Email}}</label><input type="text" class="form-control" [(ngModel)]="message" name="name">
+        </div>
+        <div class="modal-body">
+            <label>{{Nic}}</label><input type="text" class="form-control" [(ngModel)]="message" name="name">
+        </div>
+        <div class="modal-body">
+            <label>{{FullName}}</label><input type="text" class="form-control" [(ngModel)]="message" name="name">
+        </div>
         <div class="modal-footer">
             <button type="button" class="btn btn-primary" (click)="apply()">OK</button>
             <button type="button" class="btn btn-default" (click)="close()">Cancel</button>
