--- a/Amex.CCA.WebClient/app/src/app/dashboard/dashboard.template.html
+++ b/Amex.CCA.WebClient/app/src/app/dashboard/dashboard.template.html
@@ -201,7 +201,7 @@
         </div>
 
           <label class="btn btn-default" (click)="openCreditCardView(creditcard?.CreditCardId)"> View </label>
-          <label class="btn btn-default" (click)="openCreditCardEdit()"> Edit </label>
+          <label class="btn btn-default" (click)="openCreditCardEdit(creditcard?.CreditCardId)"> Edit </label>
           <label class="btn btn-default" (click)="openCreditCardApprove()"> Approve </label>
 
         </div>
