UserRegistration Related features

--- a/Amex.CCA.WebClient/app/src/app/user/user-registration.template.html
+++ b/Amex.CCA.WebClient/app/src/app/user/user-registration.template.html
@@ -1,5 +1,46 @@
-<div class="panel panel-primary">
-<div class="panel-heading">
-
-</div>
+<div class="row">
+    <h3>Register</h3>
+    <br/>
+    <div>
+        <form [formGroup]="registrationForm">
+            <div class=" row form-group">
+                <div class="col-md-2">Name</div>
+                <div class="col-md-4">
+                    <input id="txtProfileName" formControlName="profileName" type="text" class="form-control" />
+                </div>
+            </div>
+            <div class="row form-group">
+                <div class="col-md-2">Email</div>
+                <div class="col-md-4">
+                    <input id="txtEmail" formControlName="email" type="email" class="form-control" />
+                </div>
+            </div>
+            <div class="row form-group">
+                <div class="col-md-2">Role</div>
+                <div class="col-md-4">
+                    <select id="ddRole" formControlName="role" class="form-control">
+                        <option *ngFor="let rl of roles;let first=first" selected="{{first}}" [value]=rl>{{rl}}</option>
+                    </select>
+                </div>
+            </div>
+            <div class="row form-group">
+                <div class="col-md-2">Password</div>
+                <div class="col-md-4">
+                    <input id="txtPassword" formControlName="password" type="password" class="form-control" />
+                </div>
+            </div>
+            <div class="row form-group">
+                <div class="col-md-2">Confirm Password</div>
+                <div class="col-md-4">
+                    <input id="txtConfirmPassword" formControlName="confirmPassword" type="password" class="form-control" />
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-md-2"></div>
+                <div class="col-md-4">
+                    <button [disabled]="!registrationForm.valid" class="btn btn-primary pull-right" type="submit">Register</button>
+                </div>
+            </div>
+        </form>
+    </div>
 </div>
