--- a/Amex.CCA.WebClient/app/src/app/nav-bar/navbar.template.html
+++ b/Amex.CCA.WebClient/app/src/app/nav-bar/navbar.template.html
@@ -13,12 +13,13 @@
           <div class="navbar-collapse collapse sidebar-navbar-collapse">
             <ul class="nav navbar-nav">
               <!--<li class="active"><a href="#">Menu Item 1</a></li>-->
-              <li> <a href="#">My Request</a></li>
-              <li><a [routerLink]="['dashboard/myWork']"> My Work</a></li>
+              <li *ngIf="lsUser"><a [routerLink]="['dashboard/myRequest']">My Request</a></li>
+              <li *ngIf="lsStaff"><a [routerLink]="['dashboard/myWork']"> My Work</a></li>
+              <li *ngIf="IsAdmin"><a [routerLink]="['dashboard/myApproval']"> My Approval</a></li>
               <li><a [routerLink]="['creditcard']"> Credit Card</a></li>
-              <li> <a [routerLink]="['user/editProfile']">Edit Profile</a></li>
-              <li> <a [routerLink]="['user-approve']"> Approve User</a></li>
-              <li><a class="make-a-link" (click)="onLogout()">LogOut</a></li>
+              <li><a [routerLink]="['user/editProfile']">Edit Profile</a></li>
+              <li><a [routerLink]="['user-approve']"> Approve User</a></li>
+              <li><a class="make-a-link" (click)="onLogout()">Log Out</a></li>
             </ul>
           </div><!--/.nav-collapse -->
         </div>
