--- a/Amex.CCA.WebClient/app/src/app/creditcard/viewcreditcard.template.html
+++ b/Amex.CCA.WebClient/app/src/app/creditcard/viewcreditcard.template.html
@@ -10,13 +10,13 @@
                     <label>Name in Full </label>
                 </div>
                 <div class="col-md-3 ">
-                    <label>- {{FullName}}</label>
+                    <label>- {{CreditCard.FullName}}</label>
                 </div>
                 <div class="col-md-3">
                     <label>Display Name</label>
                 </div>
                 <div class="col-md-3 ">
-                    <label>- {{DisplayName}}</label>
+                    <label>- {{CreditCard.DisplayName}}</label>
                 </div>
             </div>
 
@@ -25,13 +25,13 @@
                     <label for="txtNic">NIC</label>
                 </div>
                 <div class="col-md-3 ">
-                    <label>- {{Nic}}</label>
+                    <label>- {{CreditCard.Nic}}</label>
                 </div>
                 <div class="col-md-3">
                     <label for="txtPassport">Passport</label>
                 </div>
                 <div class="col-md-3 ">
-                    <label>- {{Passport}}</label>
+                    <label>- {{CreditCard.Passport}}</label>
                 </div>
             </div>
 
@@ -40,13 +40,13 @@
                     <label for="txtAddress">Address</label>
                 </div>
                 <div class="col-md-3 ">
-                    <label>- {{Address}} </label>
+                    <label>- {{CreditCard.Address}} </label>
                 </div>
                 <div class="col-md-3">
                     <label for="txtMobile">Mobile</label>
                 </div>
                 <div class="col-md-3 ">
-                    <label>- {{MobilePhone}} </label>
+                    <label>- {{CreditCard.MobilePhone}} </label>
                 </div>
             </div>
 
@@ -55,7 +55,7 @@
                     <label for="txtHomePhone">Home Phone</label>
                 </div>
                 <div class="col-md-3 ">
-                    <label>- {{HomePhone}}</label>
+                    <label>- {{CreditCard.HomePhone}}</label>
                 </div>
 
                 <div class="col-md-3">
@@ -63,7 +63,7 @@
                 </div>
 
                 <div class="col-md-3 ">
-                    <label>- {{OfficePhone}}</label>
+                    <label>- {{CreditCard.OfficePhone}}</label>
                 </div>
             </div>
 
@@ -72,13 +72,13 @@
                     <label for="txtEmail">Email</label>
                 </div>
                 <div class="col-md-3 ">
-                    <label>- {{Email}}</label>
+                    <label>- {{CreditCard.Email}}</label>
                 </div>
                 <div class="col-md-3">
                     <label for="txtEmployer">Employer</label>
                 </div>
                 <div class="col-md-3 ">
-                    <label>- {{Employer}}</label>
+                    <label>- {{CreditCard.Employer}}</label>
                 </div>
             </div>
 
@@ -87,13 +87,13 @@
                     <label for="txtSalary">Salary</label>
                 </div>
                 <div class="col-md-3 ">
-                    <label>- {{Salary}}</label>
+                    <label>- {{CreditCard.Salary}}</label>
                 </div>
                 <div class="col-md-3">
                     <label for="txtJobTitle">Job Title</label>
                 </div>
                 <div class="col-md-3 ">
-                    <label>-{{JobTitle}}</label>
+                    <label>-{{CreditCard.JobTitle}}</label>
                 </div>
             </div>
 
@@ -102,13 +102,13 @@
                     <label for="txtCardLimit">Card Limit</label>
                 </div>
                 <div class="col-md-3 ">
-                    <label>-Rs {{CardLimit}}</label>
+                    <label>-Rs {{CreditCard.CardLimit}}</label>
                 </div>
                 <div class="col-md-3">
                     <label for="txtCashLimit">Cash Limit</label>
                 </div>
                 <div class="col-md-3 ">
-                    <label>-Rs {{CashLimit}} </label>
+                    <label>-Rs {{CreditCard.CashLimit}} </label>
                 </div>
             </div>
 
@@ -117,13 +117,13 @@
                     <label for="ddlCardType">Card Type</label>
                 </div>
                 <div class="col-md-3 ">
-                    <label>- {{CardTypeName}} Type</label>
+                    <label>- {{CreditCard.CardTypeName}} Type</label>
                 </div>
                 <div class="col-md-3">
                     <label for="ddlNationality">Nationality</label>
                 </div>
                 <div class="col-md-3 ">
-                    <label>- {{NationalityName}} </label>
+                    <label>- {{CreditCard.NationalityName}} </label>
                 </div>
             </div>
 
@@ -132,13 +132,13 @@
                     <label for="cardstatus">Card Status</label>
                 </div>
                 <div class="col-md-3 ">
-                    <label>- {{CardStatusName}} </label>
+                    <label>- {{CreditCard.CardStatusName}} </label>
                 </div>
                 <div class="col-md-3">
                     <label for="txtNote">Note</label>
                 </div>
                 <div class="col-md-3 ">
-                    <label>- {{Note}}</label>
+                    <label>- {{CreditCard.Note}}</label>
                 </div>
             </div>
         </div>
