--- a/Amex.CCA.WebClient/app/src/app/dashboard/dashboard.template.html
+++ b/Amex.CCA.WebClient/app/src/app/dashboard/dashboard.template.html
@@ -202,7 +202,7 @@
 
           <label class="btn btn-default" (click)="openCreditCardView(creditcard?.CreditCardId)"> View </label>
           <label class="btn btn-default" (click)="openCreditCardEdit(creditcard?.CreditCardId)"> Edit </label>
-          <label class="btn btn-default" (click)="openCreditCardApprove()"> Approve </label>
+          <label class="btn btn-default" (click)="openCreditCardApprove(creditcard?.CreditCardId)"> Approve </label>
 
         </div>
 
