--- a/Amex.CCA.WebClient/app/src/app/user/user-registration.template.html
+++ b/Amex.CCA.WebClient/app/src/app/user/user-registration.template.html
@@ -2,43 +2,55 @@
     <h3>Register User</h3>
     <br/>
     <div>
-        <form [formGroup]="registrationForm">
+        <form [formGroup]="registrationForm" (ngSubmit)="onRegistrationSubmit(registrationForm.value)">
             <div class=" row form-group">
-                <div class="col-md-2">Name</div>
+                <div class="col-md-2">Name<span class="required">*</span></div>
                 <div class="col-md-4">
                     <input id="txtProfileName" formControlName="profileName" type="text" class="form-control" />
                 </div>
             </div>
             <div class="row form-group">
-                <div class="col-md-2">Email</div>
+                <div class="col-md-2">Email<span class="required">*</span></div>
                 <div class="col-md-4">
                     <input id="txtEmail" formControlName="email" type="email" class="form-control" />
                 </div>
+                <div class="col-md-4">
+                    <span class="error" *ngIf="this.registrationForm.controls['email'].dirty && this.registrationForm.controls['email'].hasError('email')">Incorrect email</span>
+                </div>
             </div>
             <div class="row form-group">
-                <div class="col-md-2">Role</div>
+                <div class="col-md-2">Role<span class="required">*</span></div>
                 <div class="col-md-4">
                     <select id="ddRole" formControlName="role" [(ngModel)]="selectedRole" class="form-control">
-                        <option *ngFor="let rl of roles;let first=first" selected="{{first}}" [value]=rl>{{rl}}</option>
+                        <option *ngFor="let rl of roles" [value]=rl>{{rl}}</option>
                     </select>
                 </div>
             </div>
             <div class="row form-group">
-                <div class="col-md-2">Password</div>
+                <div class="col-md-2">Password<span class="required">*</span></div>
                 <div class="col-md-4">
-                    <input id="txtPassword" formControlName="password" type="password" class="form-control" />
+                    <input id="txtPassword" formControlName="password" type="password" class="form-control" (keyup)="onConfirmPasswordChange(registrationForm.controls['confirmPassword'])"
+                    />
+                </div>
+                <div class="col-md-4">
+                    <span class="error" *ngIf="this.registrationForm.controls['password'].dirty && this.registrationForm.controls['password'].hasError('pattern')">Enter strong password</span>
                 </div>
             </div>
             <div class="row form-group">
-                <div class="col-md-2">Confirm Password</div>
+                <div class="col-md-2">Confirm Password<span class="required">*</span></div>
                 <div class="col-md-4">
                     <input id="txtConfirmPassword" formControlName="confirmPassword" type="password" class="form-control" />
+                </div>
+                <div class="col-md-4">
+                    <span class="error" *ngIf="registrationForm.controls['confirmPassword'].errors?.isInvalid">Passwords do not match</span>
                 </div>
             </div>
             <div class="row">
                 <div class="col-md-2"></div>
                 <div class="col-md-4">
                     <button [disabled]="!registrationForm.valid" class="btn btn-primary pull-right" type="submit">Register</button>
+                    <!-- <button  class="btn btn-primary pull-right" type="submit">Register</button> -->
+
                 </div>
             </div>
         </form>
