--- a/Amex.CCA.WebClient/app/src/app/user/user-registration.template.html
+++ b/Amex.CCA.WebClient/app/src/app/user/user-registration.template.html
@@ -15,7 +15,7 @@
                     <input id="txtEmail" formControlName="email" type="email" class="form-control" />
                 </div>
                 <div class="col-md-4">
-                    <span class="error" *ngIf="this.registrationForm.controls['email'].dirty && this.registrationForm.controls['email'].hasError('email')">Incorrect email</span>
+                    <span class="error" *ngIf="this.registrationForm.controls['email'].dirty && this.registrationForm.controls['email'].errors?.email">Enter valid email</span>
                 </div>
             </div>
             <div class="row form-group">
@@ -33,7 +33,7 @@
                     />
                 </div>
                 <div class="col-md-4">
-                    <span class="error" *ngIf="this.registrationForm.controls['password'].dirty && this.registrationForm.controls['password'].hasError('pattern')">Enter strong password</span>
+                    <span class="error" *ngIf="registrationForm.controls['password'].errors?.pattern">Enter strong password</span>                    
                 </div>
             </div>
             <div class="row form-group">
