--- a/Amex.CCA.WebClient/app/src/app/login/login.template.html
+++ b/Amex.CCA.WebClient/app/src/app/login/login.template.html
@@ -12,7 +12,7 @@
       <label for="txtPassword">Password</label>
     </div>
     <div class="col-md-6">
-      <input [(ngModel)]="txtPassword" type="text" name="txtPassword" required />
+      <input [(ngModel)]="txtPassword" type="password" name="txtPassword" required />
     </div>
   </div>
   <div class="row">
