--- a/Amex.CCA.WebClient/app/src/app/user/edit-profile.template.html
+++ b/Amex.CCA.WebClient/app/src/app/user/edit-profile.template.html
@@ -8,7 +8,7 @@
 
 <body>
     <div class="rows">
-        Create / Update User Profile Info
+        Update User Profile Information
     </div>
     <br />
     <div>
@@ -18,7 +18,7 @@
                     <label for="txtUserName">User Name</label>
                 </div>
                 <div class="col-md-3">
-                    <input id="txtUserName" formControlName="userName" type="text" class="form-control" />
+                    <input id="txtUserName" formControlName="userName" type="text" class="form-control" disabled="disabled" />
                 </div>
 
                 <div class="col-md-3">
@@ -28,15 +28,20 @@
                 <div class="col-md-3">
                     <input id="txtProfileName" formControlName="profileName" type="text" class="form-control" />
                 </div>
+                <div class="rows" style="height:50px">
 
+                </div>
                 <div class="col-md-3">
                     <label for="txtProfileImage">Profile Image</label>
                 </div>
 
                 <div class="col-md-3">
-                    <input id="txtProfileImage" formControlName="profileImage" type="text" class="form-control" />
+                    <input id="txtProfileImage" type="file" multiple="false" formControlName="profileImage" (change)="onFileUpload('profImage',$event)" />
+                    <!--<input id="txtProfileImage" formControlName="profileImage" type="text" class="form-control" />-->
                 </div>
+                <br />
 
+                <br />
                 <div class="rows">
                     <button [disabled]="!profileForm.valid" class="btn btn-primary" type="submit">Update Info</button>
                     <span> {{profileForm.valid}} </span>
