approve user to admin

--- a/Amex.CCA.WebClient/app/src/app/nav-bar/navbar.template.html
+++ b/Amex.CCA.WebClient/app/src/app/nav-bar/navbar.template.html
@@ -18,8 +18,8 @@
               <li *ngIf="IsAdmin"><a [routerLink]="['dashboard/myApproval']"> My Approval</a></li>
               <li><a [routerLink]="['creditcard']"> Credit Card</a></li>
               <li><a [routerLink]="['user/editProfile']">Edit Profile</a></li>
-              <li><a [routerLink]="['user-approve']"> Approve User</a></li>
-              <li><a class="make-a-link" (click)="onLogout()">Log Out</a></li>
+              <li *ngIf="IsAdmin"><a [routerLink]="['user-approve']"> Approve User</a></li>
+              <li ><a class="make-a-link" (click)="onLogout()">Log Out</a></li>
             </ul>
           </div><!--/.nav-collapse -->
         </div>
